[tool.poetry]
name = "to-todo-list"
version = "0.1.0"
description = ""
authors = ["Alena Poliakova <a.polyackowa2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
